--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "http://www.laborluzern.ch/"
 title = "Labor Luzern"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
+buildFuture = true
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
