Add instagram link

--- a/config.toml
+++ b/config.toml
@@ -63,3 +63,4 @@ googleAnalytics = ""
   [params.social]
   email         = "labor@laborluzern.org"
   facebook      = "https://www.facebook.com/labor.luzern.1"
+  instagram     = "https://www.instagram.com/labor.luzern/"
